Fixed misc formatting issues
Site logo too small on smartphone

--- a/plugins/custom-recipe-templates/assets/css/custom-recipe.css
+++ b/plugins/custom-recipe-templates/assets/css/custom-recipe.css
@@ -376,6 +376,7 @@ li.wpurp-recipe-instruction span {
 	width:100%;
 	margin-bottom:20px;
 	float:left;
+	padding-left: 10px;
 }
 
 .single .entry-header {
