--- a/themes/foodiepro-2.1.8/style.css
+++ b/themes/foodiepro-2.1.8/style.css
@@ -1386,6 +1386,10 @@ Structure and Layout
 	padding:10px;
 }
 
+img.mega-menu-logo {
+    max-width: initial!important;
+}
+
 a.mega-menu-link img {
   margin-bottom:0px;
 }
@@ -4679,8 +4683,8 @@ Site Footer
 
 	.site-container,
 	.before-header {
-		padding-left:5%;
-		padding-right:5%;
+		padding-left:10px;
+		padding-right:10px;
 	}
 
 	.archive-description,
